# tauri-vue-python-demo-todo

./: LICENSE  Makefile  README.md  package-lock.json  package.json  vite.config.js
src/: App.vue  utils.js
src-backend/: main.py  pyproject.toml  python_backend.spec.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  lib.rs  main.rs
