[project]
name = "src-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bottle>=0.13.3",
    "platformdirs>=4.3.7",
    "sqlalchemy>=2.0.40",
    "ujson>=5.10.0",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "pyinstaller>=6.13.0",
]
